# email_integration

./: README.md  pyproject.toml
config/: asgi.py  settings.py  urls.py
email_app/: consumers.py  models.py  routing.py  urls.py  utils.py  views.py
email_app/migrations/: 0001_initial.py
email_app/templates/: message_list.html
